Fixes #17218: Update links in login page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/index.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/index.html
@@ -68,15 +68,15 @@
           </a>
         </div>
         <div class="col-xs-12">
-          <a href="https://www.rudder.io/en/expand/new-releases-security/" target="_blank">
-            <span class="ion ion-chatboxes"></span>
-            Mailing list, IRC
+          <a href="https://www.rudder.io/open-source/community/" target="_blank">
+          <span class="ion ion-chatboxes"></span>
+            Community
           </a>
         </div>
       </div>
       <div class="no-padding col-xs-6">
         <div class="col-xs-12">
-          <a href="https://www.rudder.io/en/pricing/subscription/" target="_blank">
+          <a href="https://www.rudder.io/pricing/subscription/" target="_blank">
           <span class="fa fa-life-ring"></span>
             Support
           </a>
