Fixes #17427: Separate System Rules from USer Defined Rules in Node compliance display

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
@@ -62,6 +62,7 @@
       <li><a href="#node_properties">Properties</a></li>
       <li><a href="#node_logs">Technical logs</a></li>
       <li><a href="#node_parameters">Settings</a></li>
+      <li><a href="#system_status">System status</a></li>
     </ul>
 
   <div id="node_summary">
@@ -91,7 +92,12 @@
 
   <div id="node_parameters"></div>
 
-</div>
+    <div id="system_status">
+      <div id="systemStatus"></div>
+    </div>
+
+
+  </div>
 </detail-server>
 
 </xml:group>
