Fixes #17503: Move Markdown message in icon tooltip

--- a/builder/index.html
+++ b/builder/index.html
@@ -366,11 +366,10 @@
                                    data-trigger="hover"
                                    data-container="body"
                                    data-placement="right"
-                                   data-content="Markdown format"
+                                   data-content="This content will be displayed as <b>Markdown</b> in <b>directives</b> using this technique"
                                    data-html="true"
                                 />
                               </label>
-                              <div id="markdown-info">This content will be displayed in directives using this technique</div>
                               <div class="col-sm-8">
                                   <textarea name="description" class="form-control" id="techniqueDescription" msd-elastic rows="4" ng-model="selectedTechnique.description" placeholder="Technique Documentation"></textarea>
                               </div>
