--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -52,6 +52,9 @@
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/json2.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/clipboard.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/showdown-1.9.1.min.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/xss.min.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/utils/showdown-xss-filter.js"></script>
+
 
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/rudder.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/rudder/rudder-datatable.js"></script>
