--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/reports_server.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/reports_server.html
@@ -1,6 +1,7 @@
 <batches-list>
-
-  <runAgent></runAgent>
+  <lift:authz role="node_write">
+    <runAgent></runAgent>
+  </lift:authz>
   <lastreportgrid-intro></lastreportgrid-intro>
 
 
