Fixes #18076: Use new UI template in Directives page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/groups.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/groups.html
@@ -38,9 +38,9 @@
         </div>
 
       </div>
-
-      <div id="groupTree" class="sidebar-list">Here comes the Groups Tree</div>
-
+      <div class="sidebar-body">
+        <div id="groupTree" class="sidebar-list">Here comes the Groups Tree</div>
+      </div>
   </div>
 
   <div class="template-main" id="ajaxItemContainer" style="display:none;">
